fix overflow-y

--- a/css/contenido-editor.css
+++ b/css/contenido-editor.css
@@ -1,5 +1,5 @@
 .contenido{
-  overflow-x: scroll;
+  overflow-y: scroll;
   font-size: 14px;
   font-family: 'Montserrat', 'sans-serif';
 }
